[tool.poetry]
name = "push-random"
version = "0.1.0"
description = "Service for random notification sending"
authors = ["potykion <potykion@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.10.3"
notifiers = "^1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
