[tool.poetry]
name = "push-random"
version = "0.1.0"
description = "Service for random notification sending"
authors = ["potykion <potykion@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.10.3"
notifiers = "^1.2"
pydantic = "^1.3"
click = "^7.0"
redis = "^3.3"
dependency-injector = "^3.14"
typing-extensions = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
fakeredis = "^1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
